[gd_scene load_steps=11 format=3 uid="uid://dct0cxufbvshm"]

[ext_resource type="Script" uid="uid://be8tfeopqdel0" path="res://Scrips/GUI/MenuPausa.gd" id="1_wence"]
[ext_resource type="Texture2D" uid="uid://nq3piuj16jcl" path="res://Assets/GUI/ventanadeinicio-y-menupausa/BotonesMenu/OpcionesNormal.png" id="2_o527e"]
[ext_resource type="Texture2D" uid="uid://bvwnkdvakqpyd" path="res://Assets/GUI/ventanadeinicio-y-menupausa/BotonesOpciones/ReanudarNormal.png" id="2_obpqu"]
[ext_resource type="Texture2D" uid="uid://bnnske8hxtsg5" path="res://Assets/GUI/ventanadeinicio-y-menupausa/BotonesOpciones/ReanudarClick.png" id="3_55aee"]
[ext_resource type="Texture2D" uid="uid://dnka7k8ech6eu" path="res://Assets/GUI/ventanadeinicio-y-menupausa/BotonesMenu/OpcionesClick.png" id="3_wcmrk"]
[ext_resource type="Texture2D" uid="uid://uiivis158l0d" path="res://Assets/GUI/ventanadeinicio-y-menupausa/BotonesMenu/OpcionesMouseArriba.png" id="4_7begj"]
[ext_resource type="Texture2D" uid="uid://sawcsf472w3v" path="res://Assets/GUI/ventanadeinicio-y-menupausa/BotonesOpciones/ReanudarMouseArriba.png" id="4_7v4fu"]
[ext_resource type="Texture2D" uid="uid://cw0bxa2a6ewev" path="res://Assets/GUI/ventanadeinicio-y-menupausa/BotonesMenu/SalirNormal.png" id="5_obpqu"]
[ext_resource type="Texture2D" uid="uid://do207t3mtmi1p" path="res://Assets/GUI/ventanadeinicio-y-menupausa/BotonesMenu/SalirClick.png" id="6_55aee"]
[ext_resource type="Texture2D" uid="uid://pj4ve30ocv0o" path="res://Assets/GUI/ventanadeinicio-y-menupausa/BotonesMenu/SalirMouseArriba.png" id="7_7v4fu"]

[node name="Menu Pausa" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wence")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 1

[node name="Reanudar" type="TextureButton" parent="Panel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_obpqu")
texture_pressed = ExtResource("3_55aee")
texture_hover = ExtResource("4_7v4fu")

[node name="Opciones" type="TextureButton" parent="Panel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_o527e")
texture_pressed = ExtResource("3_wcmrk")
texture_hover = ExtResource("4_7begj")

[node name="Salir" type="TextureButton" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("5_obpqu")
texture_pressed = ExtResource("6_55aee")
texture_hover = ExtResource("7_7v4fu")

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Reanudar" to="." method="_on_reanudar_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/Salir" to="." method="_on_salir_pressed"]
